# home-trader

./: .home-trader-spec.md  .project_tasks.md  Cargo.toml  README.md
docs/: api.md  architecture.md  development.md
engine/: Cargo.toml  build.rs
engine/proto/: trading.proto
engine/src/: error.rs  lib.rs  main.rs
engine/src/config/: mod.rs  settings.rs
engine/src/data/: csv_parser.rs  market_data.rs  mod.rs
engine/src/indicators/: ema.rs  mod.rs  rsi.rs  sma.rs
engine/src/models/: candle.rs  mod.rs
engine/src/services/: mod.rs  trading_service.rs
engine/src/services/trading_service/: calculate_indicator.rs  get_market_data.rs  helpers.rs  load_csv_data.rs  mod.rs  simulate_trade.rs
gui/: Cargo.toml
gui/assets/config/: default.json
gui/src/: app.rs  main.rs
gui/src/components/: command_palette.rs  mod.rs  toolbar.rs
gui/src/components/chart/: candlestick.rs  indicators.rs  mod.rs
gui/src/config/: mod.rs  theme.rs
gui/src/services/: engine_client.rs  mod.rs
gui/src/state/: app_state.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  utils.rs
tests/data/: sample.csv
tests/integration/: .gitkeep
